--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-/bootstrap/compiled.php
-/vendor
-/app/config/app.php
-/app/config/database.php
+bootstrap/compiled.php
+vendor/*
+app/config/*
 composer.phar
 composer.lock
 .env.*.php
