--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 bootstrap/compiled.php
-vendor/*
-app/config/*
+vendor/
 composer.phar
 composer.lock
 .env.*.php
 .env.php
 .DS_Store
 Thumbs.db
+app/config/
